Prevent lozenge label text from wrapping at container edges

--- a/less/plugins/adapt-contrib-slider/slider.less
+++ b/less/plugins/adapt-contrib-slider/slider.less
@@ -42,6 +42,7 @@
         min-width: 2.5rem;
         padding: 0 0.5rem;
         border-radius: @item-ui-border-radius;
+        white-space: nowrap;
       }
     }
   }
